--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </tr>
       <br />
       <input type="checkbox" id="send me monthly news letter" />
-      <label for="message">send me monthly news letter</label>
+      <label for="message">Send me monthly news letter</label>
       <p>What is your question ?</p>
       <textarea
         name="text"
